link to email! and more formatting

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,19 +51,23 @@
     <!-- Content -->
     <div class="container py-5">
       <div class="row" style="text-align: center;"> 
-        <h1><u style="font-size: 70px;">Portfolio</u></h1> <!-- Font needed, make text bigger -->
+        <h1><u style="font-size: 70px;">Portfolio</u></h1> 
       </div>
     </div>
     <div class="container">
       <div class="row py-5">
         <div class="col-md-6">
           <a class="link" href="uxprojectpage.html"><img src="./Michigan_State_Spartans_logo_PNG3.png" class="msulogo" alt="Green Spartan Logo"></a>
-          <h3 style="text-align:center">iteachmsu UX Project</h3> <!-- Font needed -->
+          <h3 style="text-align:center">iteachmsu UX Project</h3> 
         </div>
         <div class="col-md-6">
           <a class="link" href="pythonpage.html"><img src="./PythonLogo.png" class="pythonlogo" alt="A yellow cartoon python and a blue cartoon python wraping around each other."></a>
-          <h3 style="text-align:center">CSE Project: Twitter X Facebook <br> Data Analysis</h3> <!-- Font Needed -->
+          <h3 style="text-align:center">CSE Project: Twitter X Facebook <br> Data Analysis</h3> 
         </div>
+        
+        <h4 style="padding-top: 180px;"><center>Contact me! <a href= "mailto: mk.strn5385@gmail.com" style="color: #622E71;"> Email<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+          <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
+        </svg> </a></center></h4>
   </section>
 
   
