--- a/pythonpage.html
+++ b/pythonpage.html
@@ -50,10 +50,13 @@
 
     <!-- Header -->
     <br>
-    <h1 style= "padding-top: 25px; font-size: 55px;" ><center> Twitter X Facebook
+    <h1 style= "font-size: 55px;" ><center> Twitter X Facebook
       Data Analysis </center></h1>
     <br>
     <hr>
+    <h4 style="text-align: right; padding-right: 180px;">Contact me! <a href= "mailto: mk.strn5385@gmail.com" style="color: #622E71;"> Email<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+      <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
+    </svg> </a></h4>
     <div class="container">
     <!-- Content -->
     <h3 style="font-size: 40px;">Project Goal</h3>
@@ -78,10 +81,10 @@
     <!-- Final Product -->
     <h3 style="font-size: 40px;">Final Product</h3>
       <div class="row py-5">
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <img src="./RealCodeImage.png" width="600px" class="img-fluid" alt="Code from read_files() that shows how to open, read, and close a file as well as make a nested dictionary" style="padding-left: 10px;">
         </div>
-        <div class="col-md-6"> 
+        <div class="col-lg-6"> 
           <p style="padding-top: 110px;"><center>This is a function from my program called: read_files().
              Its purpose is to open the files that the user inputs when prompted, then it strips the files, 
              reads them, closes the files, and creates a nested dictionary that holds the user information from the files. </center></p>
@@ -89,10 +92,10 @@
       </div>
       <div class="container">
         <div class="row py-5">
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <img src="./pythonmenuimage.png" width="600px" class="img-fluid" alt="imported menu with seven options">
           </div>
-          <div class="col-md-6"> 
+          <div class="col-lg-6"> 
             <p style="padding-top: 80px;"><center>This is the menu given after the user inputs the files. 
               The user can then input their choice and the program spits out the information asked for.</center></p>
           </div>
@@ -110,3 +113,7 @@
        I feel it would be more efficient to make one function to do all three depending on the users input.
       </p>
     </div>
+    
+  
+  </body>
+</html>
