--- a/uxprojectpage.html
+++ b/uxprojectpage.html
@@ -50,9 +50,12 @@
 
     <!-- Header -->
     <br>
-    <h1 style= "padding-top: 25px; font-size: 55px;"><center> ITeachMSU UX Design Project </center></h1>
+    <h1 style= "font-size: 55px;"><center> ITeachMSU UX Design Project </center></h1>
     <br>
     <hr>
+    <h4 style="text-align: right; padding-right: 180px;">Contact me! <a href= "mailto: mk.strn5385@gmail.com" style="color: #622E71;"> Email<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+      <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
+    </svg> </a></h4>
     <div class="container">
     <!-- Content -->
     <h3 style="font-size: 40px;">Overview</h3>
@@ -79,25 +82,25 @@
       <li>Allow the homepage to explain the sites purpose and goals</li>
       <li>Merge the feed page and browse page into one organized page</li>
       <li>Make he calendar page more readable for users</li>
-    </ol>>
+    </ol>
 
     <!-- Prototype -->
     <br>
     <h3 style="font-size: 40px;">The Prototype</h3>
       <div class="row py-5">
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <p>image goes here</p>
         </div>
-        <div class="col-md-6"> 
+        <div class="col-lg-6"> 
           <p>content content content</p>
         </div>
       </div>
       <div class="container">
         <div class="row py-5">
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <p>image goes here</p>
           </div>
-          <div class="col-md-6"> 
+          <div class="col-lg-6"> 
             <p>content content content</p>
           </div>
         </div>
@@ -108,3 +111,6 @@
     <br>
     <p>content content content</p>
     </div>
+    
+  </body>
+</html>
