beginning resume page

--- a/resume.html
+++ b/resume.html
@@ -49,6 +49,11 @@
     </nav>
 
     <!-- Header, Google Doc Resume Download, Contact Me -->
+    <div>
+      <h1><u style="font-size: 70px;"><center>Resume</center></u></h1>
+      <hr>
+        <a class="btn btn-primary" href="./Micayla_Stern_Resume.pdf" role="button">Resume PDF</a>
+    </div>
 
     <!-- Resume -->
 
