--- a/resume.html
+++ b/resume.html
@@ -52,10 +52,88 @@
     <div>
       <h1><u style="font-size: 70px;"><center>Resume</center></u></h1>
       <hr>
-        <a class="btn btn-primary" href="./Micayla_Stern_Resume.pdf" role="button">Resume PDF</a>
+        <h3><center>Want to <b>Download</b> my resume?</center></h3>
+        <center><a class="btn btn-primary" href="./Micayla_Stern_Resume.pdf" role="button">Resume PDF</a></center>
+    </div>
+    
+    <!-- Resume -->
+    <div class="container">
+      <div class="row py-5">
+        <div class="col-md-7" style="padding-right: 20px;">
+          <h3>Professional Summary</h3>
+          <p>Hardworking and passionate job seeker with strong organizational and
+            communication skills eager to secure entry-level UX/UI position. Ready
+            to help team achieve company goals.</p>
+            <br>
+            <hr>
+            <br>
+          <h3>Education</h3>
+          <p><b>Bachelor of Arts, Experience Architecture,</b> Expected in 04/2027</p>
+          <p><b>Michigan State University</b> - East Lansing, MI</p>
+          <ul>
+            <li>Dean's List Fall Semester 2023</li>
+            <li>3.533GPA</li>
+          </ul>
+          <br>
+          <hr>
+          <br>
+          <h3>Professional Experience</h3>
+          <p><b>XA Client Project,</b> 03/2024 to 04/2024</p>
+          <p><b>MSU Teaching Center</b> - East Lansing, MI</p>
+          <ul>
+            <li>Maintained comprehensive documentation for all project phases,
+              ensuring transparency and timely access to information for client.</li>
+            <li>Developed and executed comprehensive project plans to ensure timely
+              completion of deliverables.</li>
+            <li>Produced wireframes outlining potential enhancements for client
+              websites, aligning with their objectives and fostering effective
+              communication of design concepts.</li>
+              <li>Collaborated closely with my team and clients to achieve project
+                objectives, fostering effective communication, and leveraging
+                collective expertise to drive successful outcomes.</li>
+          </ul>
+          <br>
+          <p><b>Flight Crew,</b> 10/2022 to 08/2023</p>
+          <p><b>Sky Zone Trampoline Park</b> - 2737 Union Lake Rd, Commerce Charter Twp, MI 48382</p>
+          <ul>
+            <li>Reduced potential safety hazards by strictly adhering to established
+              rules.</li>
+              <li>Proficiently managed membership sales, adeptly guiding customers
+                through membership options and effectively closing sales
+                transactions.</li>
+            <li>Enthusiastically served as party host, ensuring memorable and
+              enjoyable experiences for guests through engaging activities and
+              impeccable customer service.</li>
+            <li>Demonstrated customer service and food safety in food preparation
+               and sales, efficiently managing food service operations to deliver 
+               high-quality products and exceptional customer satisfaction.</li>
+               <br>
+               <hr>
+          </ul>
+        </div>
+        <div class="col-md-5" style="padding-left: 20px;">
+          <h3>Contact</h3>
+          <p><b>Address:</b> Waterford, MI 48329</p>
+          <p><b>Phone:</b> (248)-935-2273</p>
+          <p><b>Email:</b> mk.strn5385@gmail.com</p>
+          <br>
+          <hr>
+          <br>
+          <h3>Skills</h3>
+          <p><b>Customer Satisfaction</b></p>
+          <p><b>Team Motivation</b></p>
+          <p><b>Project Scheduling</b></p>
+          <p><b>Deadline Management</b></p>
+          <p><b>Web Design</b></p>
+          <p><b>HTML and CSS Coding</b></p>
+          <p><b>UI and UX Design</b></p>
+          <p><b>Client Communication</b></p>
+          <br>
+          <hr>
+        </div>
+      </div>
     </div>
 
-    <!-- Resume -->
 
   </section>
 
