ux project page!

--- a/uxprojectpage.html
+++ b/uxprojectpage.html
@@ -86,23 +86,33 @@
 
     <!-- Prototype -->
     <br>
-    <h3 style="font-size: 40px;">The Prototype</h3>
-      <div class="row py-5">
-        <div class="col-lg-6">
-          <p>image goes here</p>
-        </div>
-        <div class="col-lg-6"> 
-          <p>content content content</p>
-        </div>
+  <h3 style="font-size: 40px;">The Wireframes</h3>
+  <div class="container">
+    <div class="row py-5">
+      <div class="col-lg-6">
+        <img src="./iteachmsu_home.png" width="600px" class="img-fluid" alt="Code from read_files() that shows how to open, read, and close a file as well as make a nested dictionary" style="padding-left: 10px;">
       </div>
-      <div class="container">
-        <div class="row py-5">
-          <div class="col-lg-6">
-            <p>image goes here</p>
-          </div>
-          <div class="col-lg-6"> 
-            <p>content content content</p>
-          </div>
+      <div class="col-lg-5" style="padding-top: 40px;"> 
+        <p><center>Wireframe of a reworked homepage. One of the biggest complains about the website was that the homepage was cluttered and confusing for new users. During our research
+        my team found that having a clear description of the sites goals is crucial to a site like iteach. Our team also found that it was crucial to have only the most userful information on the homepage. We created a basic
+        wireframe to begin with. Once we were happy, we moved forward to create a high-fidelity wireframe that showed off our design.
+        Since the site is a place for educators to seek guidence, we decided it was best to have popular articles and upcoming events on the homepage since those would be the most looked for by users. On the banner, there is 
+        a breif description of the sites goals to help users get a better understanding of where they are.
+        </center></p>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row py-5">
+      <div class="col-lg-6">
+        <img src="./iteachmsu_events.png" width="600px" class="img-fluid" alt="imported menu with seven options">
+      </div>
+      <div class="col-lg-6"> 
+        <p style="padding-top: 130px;"><center>Wireframe of Events Page. The events page on the original iteach site was said to be difficult to understanding and fairly cluttered.
+          Our team decided it was best to add a simple calendar that gives you the ability to select dates to look at. When the page is opened it shows upcoming events and a button to reserve a spot at the event.
+        </center></p>
+      </div>
+    </div>
         </div>
 
     <!-- Conclusion -->
