--- a/uxprojectpage.html
+++ b/uxprojectpage.html
@@ -119,8 +119,8 @@
     <br>
     <h3 style="font-size: 40px;">Conclusion</h3>
     <br>
-    <p>content content content</p>
-    </div>
+    <p>Project is ongoing. Conclusion will be added when project is done!</p>
+  </div>
     
   </body>
 </html>
